Actually test that no System.err is produced